examples/bad/DestructiveAction.tsx
export function DangerZone() {
  return <button onClick={deleteWorkspace}>Delete workspace</button>;
}
